 
add_library(Poco
	src/Ascii.cpp 
    src/Bugcheck.cpp 
    src/LocalDateTime.cpp 
    src/DigestEngine.cpp 
    src/EventArgs.cpp 
    src/FormattingChannel.cpp 
    src/Latin1Encoding.cpp 
    src/LogStream.cpp 
    src/MD5Engine.cpp 
    src/NotificationCenter.cpp 
    src/TimedNotificationQueue.cpp 
    src/NumberParser.cpp 
    src/Process.cpp 
    src/Runnable.cpp 
    src/SharedLibrary.cpp 
    src/Stopwatch.cpp 
    src/StringTokenizer.cpp 
    src/TaskNotification.cpp 
    src/TextEncoding.cpp 
    src/ActiveDispatcher.cpp 
    src/URIStreamOpener.cpp 
    src/UUID.cpp 
    src/PipeStream.cpp 
    src/Unicode.cpp 
    src/ArchiveStrategy.cpp 
    src/BinaryWriter.cpp 
    src/DateTime.cpp 
    src/DeflatingStream.cpp 
    src/Formatter.cpp 
    src/InflatingStream.cpp 
    src/LoggingRegistry.cpp 
    src/MD4Engine.cpp 
    src/Notification.cpp 
    src/PriorityNotificationQueue.cpp 
    src/NumberFormatter.cpp 
    src/NumericString.cpp 
    src/PatternFormatter.cpp 
    src/RefCountedObject.cpp 
    src/Semaphore.cpp 
    src/SplitterChannel.cpp 
    src/TaskManager.cpp 
    src/TextConverter.cpp 
    src/ThreadTarget.cpp 
    src/URIStreamFactory.cpp 
    src/UnicodeConverter.cpp 
    src/PipeImpl.cpp 
    src/FileStream.cpp 
    src/ASCIIEncoding.cpp 
    src/DateTimeFormat.cpp 
    src/Clock.cpp 
    src/DigestStream.cpp 
    src/ErrorHandler.cpp 
    src/HexBinaryDecoder.cpp 
    src/Latin9Encoding.cpp 
    src/NamedEvent.cpp 
    src/Manifest.cpp 
    src/URI.cpp 
    src/AbstractObserver.cpp 
    src/PurgeStrategy.cpp 
    src/RotateStrategy.cpp 
    src/SimpleFileChannel.cpp 
    src/StreamChannel.cpp 
    src/SynchronizedObject.cpp 
    src/TeeStream.cpp 
    src/TextIterator.cpp 
    src/UTF16Encoding.cpp 
    src/UUIDGenerator.cpp 
    src/UTF8String.cpp 
    src/AsyncChannel.cpp 
    src/Channel.cpp 
    src/DateTimeFormatter.cpp 
    src/DirectoryIterator.cpp 
    src/Exception.cpp 
    src/LineEndingConverter.cpp 
    src/LogFile.cpp 
    src/NamedMutex.cpp 
    src/Message.cpp 
    src/RWLock.cpp 
    src/Condition.cpp 
    src/StreamConverter.cpp 
    src/Hash.cpp 
    src/TextBufferIterator.cpp 
    src/Timespan.cpp 
    src/Void.cpp 
    src/AtomicCounter.cpp 
    src/Base64Decoder.cpp 
    src/Checksum.cpp 
    src/DateTimeParser.cpp 
    src/FPEnvironment.cpp 
    src/Logger.cpp 
    src/NullChannel.cpp 
    src/Mutex.cpp 
    src/Random.cpp 
    src/StreamCopier.cpp 
    src/HashStatistic.cpp 
    src/Thread.cpp 
    src/Timestamp.cpp 
    src/Format.cpp 
    src/SharedMemory.cpp 
    src/Base64Encoder.cpp 
    src/Configurable.cpp 
    src/File.cpp 
    src/RandomStream.cpp 
    src/ThreadLocal.cpp 
    src/Timezone.cpp 
    src/ConsoleChannel.cpp 
    src/Glob.cpp 
    src/Token.cpp 
    src/ThreadPool.cpp 
    src/NotificationQueue.cpp 
    src/BinaryReader.cpp 
    src/CountingStream.cpp 
    src/Debugger.cpp 
    src/FileChannel.cpp 
    src/HexBinaryEncoder.cpp 
    src/LoggingFactory.cpp 
    src/MemoryPool.cpp 
    src/MemoryStream.cpp 
    src/NestedDiagnosticContext.cpp 
    src/NullStream.cpp 
    src/Path.cpp 
    src/Pipe.cpp 
    src/RegularExpression.cpp 
    src/SHA1Engine.cpp 
    src/SignalHandler.cpp 
    src/StreamTokenizer.cpp 
    src/Task.cpp 
    src/TemporaryFile.cpp 
    src/UTF8Encoding.cpp 
    src/FileStreamFactory.cpp 
    src/zlib/adler32.c 
    src/zlib/crc32.c 
    src/zlib/deflate.c 
    src/zlib/gzclose.c 
    src/zlib/gzlib.c 
    src/zlib/gzread.c 
    src/zlib/gzwrite.c 
    src/zlib/infback.c 
    src/zlib/inffast.c 
    src/zlib/inflate.c 
    src/zlib/inftrees.c 
    src/zlib/trees.c 
    src/zlib/uncompr.c 
    src/zlib/zutil.c 
    src/zlib/zcompress.c 
    src/Zip/Add.cpp 
    src/Zip/AutoDetectStream.cpp 
    src/Zip/Compress.cpp 
    src/Zip/Decompress.cpp 
    src/Zip/Delete.cpp 
    src/Zip/Keep.cpp 
    src/Zip/ParseCallback.cpp 
    src/Zip/PartialStream.cpp 
    src/Zip/Rename.cpp 
    src/Zip/Replace.cpp 
    src/Zip/SkipCallback.cpp 
    src/Zip/ZipArchive.cpp 
    src/Zip/ZipArchiveInfo.cpp 
    src/Zip/ZipCommon.cpp 
    src/Zip/ZipDataInfo.cpp 
    src/Zip/ZipException.cpp 
    src/Zip/ZipFileInfo.cpp 
    src/Zip/ZipLocalFileHeader.cpp 
    src/Zip/ZipManipulator.cpp 
    src/Zip/ZipOperation.cpp 
    src/Zip/ZipStream.cpp 
    src/Zip/ZipUtil.cpp 
    src/JSON/Array.cpp 
    src/JSON/Handler.cpp 
    src/JSON/JSONException.cpp 
    src/JSON/Object.cpp 
    src/JSON/ParseHandler.cpp 
    src/JSON/Parser.cpp 
    src/JSON/PrintHandler.cpp 
    src/JSON/Query.cpp 
    src/JSON/Stringifier.cpp 
    src/JSON/Template.cpp 
    src/JSON/TemplateCache.cpp 
    src/pcre_maketables.c 
    src/pcre_newline.c 
    src/pcre_ord2utf8.c 
    src/pcre_refcount.c 
    src/pcre_string_utils.c 
    src/pcre_study.c 
    src/pcre_tables.c 
    src/pcre_ucd.c 
    src/pcre_valid_utf8.c 
    src/pcre_version.c 
    src/pcre_xclass.c 
    src/pcre_byte_order.c 
    src/pcre_chartables.c 
    src/pcre_compile.c 
    src/pcre_config.c 
    src/pcre_dfa_exec.c 
    src/pcre_exec.c 
    src/pcre_fullinfo.c 
    src/pcre_get.c 
    src/pcre_globals.c 
    src/pcre_jit_compile.c 
    src/UTF32Encoding.cpp 
    src/Var.cpp 
    src/VarHolder.cpp 
    src/Util/LoggingSubsystem.cpp  
    src/Util/MapConfiguration.cpp  
    src/Util/Option.cpp  
    src/Util/OptionCallback.cpp  
    src/Util/OptionException.cpp  
    src/Util/OptionProcessor.cpp  
    src/Util/OptionSet.cpp  
    src/Util/PropertyFileConfiguration.cpp  
    src/Util/RegExpValidator.cpp  
    src/Util/ServerApplication.cpp  
    src/Util/Subsystem.cpp  
    src/Util/SystemConfiguration.cpp  
    src/Util/TimerTask.cpp  
    src/Util/Validator.cpp  
    src/Util/XMLConfiguration.cpp  
    src/Util/AbstractConfiguration.cpp  
    src/Util/Application.cpp  
    src/Util/ConfigurationMapper.cpp  
    src/Util/ConfigurationView.cpp  
    src/Util/FilesystemConfiguration.cpp  
    src/Util/HelpFormatter.cpp  
    src/Util/IniFileConfiguration.cpp  
    src/Util/IntValidator.cpp  
    src/Util/JSONConfiguration.cpp  
    src/Util/LayeredConfiguration.cpp  
    src/Util/LoggingConfigurator.cpp 
    src/XML/AbstractContainerNode.cpp 
    src/XML/AbstractNode.cpp 
    src/XML/Attr.cpp 
    src/XML/Attributes.cpp 
    src/XML/AttributesImpl.cpp 
    src/XML/AttrMap.cpp 
    src/XML/CDATASection.cpp 
    src/XML/CharacterData.cpp 
    src/XML/ChildNodesList.cpp 
    src/XML/Comment.cpp 
    src/XML/ContentHandler.cpp 
    src/XML/DeclHandler.cpp 
    src/XML/DefaultHandler.cpp 
    src/XML/Document.cpp 
    src/XML/DocumentEvent.cpp 
    src/XML/DocumentFragment.cpp 
    src/XML/DocumentType.cpp 
    src/XML/DOMBuilder.cpp 
    src/XML/DOMException.cpp 
    src/XML/DOMImplementation.cpp 
    src/XML/DOMObject.cpp 
    src/XML/DOMParser.cpp 
    src/XML/DOMSerializer.cpp 
    src/XML/DOMWriter.cpp 
    src/XML/DTDHandler.cpp 
    src/XML/DTDMap.cpp 
    src/XML/Element.cpp 
    src/XML/ElementsByTagNameList.cpp 
    src/XML/Entity.cpp 
    src/XML/EntityReference.cpp 
    src/XML/EntityResolver.cpp 
    src/XML/EntityResolverImpl.cpp 
    src/XML/XMLErrorHandler.cpp 
    src/XML/EventDispatcher.cpp 
    src/XML/EventException.cpp 
    src/XML/EventListener.cpp 
    src/XML/EventTarget.cpp 
    src/XML/InputSource.cpp 
    src/XML/LexicalHandler.cpp 
    src/XML/Locator.cpp 
    src/XML/LocatorImpl.cpp 
    src/XML/MutationEvent.cpp 
    src/XML/Name.cpp 
    src/XML/NamedNodeMap.cpp 
    src/XML/NamePool.cpp 
    src/XML/NamespaceStrategy.cpp 
    src/XML/NamespaceSupport.cpp 
    src/XML/Node.cpp 
    src/XML/NodeAppender.cpp 
    src/XML/NodeFilter.cpp 
    src/XML/NodeIterator.cpp 
    src/XML/NodeList.cpp 
    src/XML/Notation.cpp 
    src/XML/ParserEngine.cpp 
    src/XML/ProcessingInstruction.cpp 
    src/XML/QName.cpp 
    src/XML/SAXException.cpp 
    src/XML/SAXParser.cpp 
    src/XML/Text.cpp 
    src/XML/TreeWalker.cpp 
    src/XML/ValueTraits.cpp 
    src/XML/WhitespaceFilter.cpp 
    src/XML/XMLException.cpp 
    src/XML/XMLFilter.cpp 
    src/XML/XMLFilterImpl.cpp 
    src/XML/xmlparse.cpp 
    src/XML/XMLReader.cpp 
    src/XML/xmlrole.c 
    src/XML/XMLStreamParser.cpp 
    src/XML/XMLStreamParserException.cpp 
    src/XML/xmltok.c 
    src/XML/xmltok_impl.c 
    src/XML/xmltok_ns.c  
    src/XML/XMLWriter.cpp 
    src/Event.cpp 
    src/XML/XMLEvent.cpp 
    src/Environment.cpp 
    src/Error.cpp 
    src/Latin2Encoding.cpp 
    src/JSONString.cpp 
    src/Windows1250Encoding.cpp 
    src/Windows1251Encoding.cpp 
    src/Windows1252Encoding.cpp 
    src/EventChannel.cpp 
    src/Innovative_includes.cpp 
    src/AbstractHTTPRequestHandler.cpp 
    src/DatagramSocket.cpp 
    src/DatagramSocketImpl.cpp 
    src/DialogSocket.cpp 
    src/DNS.cpp 
    src/FilePartSource.cpp 
    src/FTPClientSession.cpp 
    src/FTPStreamFactory.cpp 
    src/HostEntry.cpp 
    src/HTMLForm.cpp 
    src/HTTPAuthenticationParams.cpp 
    src/HTTPBasicCredentials.cpp 
    src/HTTPBufferAllocator.cpp 
    src/HTTPChunkedStream.cpp 
    src/HTTPClientSession.cpp 
    src/HTTPCookie.cpp 
    src/HTTPCredentials.cpp 
    src/HTTPDigestCredentials.cpp 
    src/HTTPFixedLengthStream.cpp 
    src/HTTPHeaderStream.cpp 
    src/HTTPIOStream.cpp 
    src/HTTPMessage.cpp 
    src/HTTPRequest.cpp 
    src/HTTPRequestHandler.cpp 
    src/HTTPRequestHandlerFactory.cpp 
    src/HTTPResponse.cpp 
    src/HTTPServer.cpp 
    src/HTTPServerConnection.cpp 
    src/HTTPServerConnectionFactory.cpp 
    src/HTTPServerParams.cpp 
    src/HTTPServerRequest.cpp 
    src/HTTPServerRequestImpl.cpp 
    src/HTTPServerResponse.cpp 
    src/HTTPServerResponseImpl.cpp 
    src/HTTPServerSession.cpp 
    src/HTTPSession.cpp 
    src/HTTPSessionFactory.cpp 
    src/HTTPSessionInstantiator.cpp 
    src/HTTPStream.cpp 
    src/HTTPStreamFactory.cpp 
    src/ICMPClient.cpp 
    src/ICMPEventArgs.cpp 
    src/ICMPPacket.cpp 
    src/ICMPPacketImpl.cpp 
    src/ICMPSocket.cpp 
    src/ICMPSocketImpl.cpp 
    src/ICMPv4PacketImpl.cpp 
    src/IPAddress.cpp 
    src/MailMessage.cpp 
    src/MailRecipient.cpp 
    src/MailStream.cpp 
    src/MediaType.cpp 
    src/MessageHeader.cpp 
    src/MultipartReader.cpp 
    src/MultipartWriter.cpp 
    src/NameValueCollection.cpp 
    src/NetException.cpp 
    src/NullPartHandler.cpp 
    src/PartHandler.cpp 
    src/PartSource.cpp 
    src/POP3ClientSession.cpp 
    src/QuotedPrintableDecoder.cpp 
    src/QuotedPrintableEncoder.cpp 
    src/RawSocket.cpp 
    src/RawSocketImpl.cpp 
    src/RemoteSyslogChannel.cpp 
    src/RemoteSyslogListener.cpp 
    src/ServerSocket.cpp 
    src/ServerSocketImpl.cpp 
    src/SMTPClientSession.cpp 
    src/Socket.cpp 
    src/SocketAddress.cpp 
    src/SocketImpl.cpp 
    src/SocketNotification.cpp 
    src/SocketNotifier.cpp 
    src/SocketReactor.cpp 
    src/SocketStream.cpp 
    src/StreamSocket.cpp 
    src/StreamSocketImpl.cpp 
    src/StringPartSource.cpp 
    src/TCPServer.cpp 
    src/TCPServerConnection.cpp 
    src/TCPServerConnectionFactory.cpp 
    src/TCPServerDispatcher.cpp 
    src/TCPServerParams.cpp 
    src/WebSocket.cpp 
    src/WebSocketImpl.cpp 
    src/TCPStream_Mb.cpp 
    src/RemotingNG/AttributedObject.cpp 
    src/RemotingNG/BinaryDeserializer.cpp 
    src/RemotingNG/BinarySerializer.cpp 
    src/RemotingNG/Context.cpp 
    src/RemotingNG/Deserializer.cpp 
    src/RemotingNG/EventSubscriber.cpp 
    src/RemotingNG/Identifiable.cpp 
    src/RemotingNG/Listener.cpp 
    src/RemotingNG/MethodHandler.cpp 
    src/RemotingNG/ORB.cpp 
    src/RemotingNG/Proxy.cpp 
    src/RemotingNG/ProxyFactory.cpp 
    src/RemotingNG/ProxyFactoryManager.cpp 
    src/RemotingNG/RemoteObject.cpp 
    src/RemotingNG/RemotingException.cpp 
    src/RemotingNG/Serializer.cpp 
    src/RemotingNG/SerializerBase.cpp 
    src/RemotingNG/ServerTransport.cpp 
    src/RemotingNG/Skeleton.cpp 
    src/RemotingNG/Transport.cpp 
    src/RemotingNG/TransportFactory.cpp 
    src/RemotingNG/TransportFactoryManager.cpp 
    src/RemotingNG/URIUtility.cpp 
    src/RemotingNG/TCP/src/ChannelStream.cpp 
    src/RemotingNG/TCP/src/Connection.cpp 
    src/RemotingNG/TCP/src/ConnectionManager.cpp 
    src/RemotingNG/TCP/src/Frame.cpp 
    src/RemotingNG/TCP/src/FrameQueue.cpp 
    src/RemotingNG/TCP/src/ServerConnection.cpp 
    src/RemotingNG/TCP/src/ServerConnectionFactory.cpp 
    src/RemotingNG/TCP/src/SocketFactory.cpp 
    src/RemotingNG/TCP/src/TCPListener.cpp 
    src/RemotingNG/TCP/src/TCPServerTransport.cpp 
    src/RemotingNG/TCP/src/TCPTransport.cpp 
    src/RemotingNG/TCP/src/TCPTransportFactory.cpp 
    src/RemotingNG/TCP/src/Timer.cpp 
    src/IPAddressImpl.cpp 
    src/SocketAddressImpl.cpp 
    src/Net.cpp
    $<$<PLATFORM_ID:Windows>:src/WindowsConsoleChannel.cpp>

)

set_target_properties(Poco PROPERTIES EXPORT_NAME Poco)

add_library(Athena::Poco ALIAS Poco)

target_link_libraries(Poco
PRIVATE
     Athena::Support
     Athena::Boards
     Athena::Devices
     Athena::Osal
)

if (WIN32)
  target_compile_definitions(Poco
	PUBLIC
	    _CRT_SECURE_NO_WARNINGS
	    POCO_NO_SOO
	    POCO_NO_AUTOMATIC_LIBS
	    WIN64
	    POCO_PTR_IS_64_BIT
            POCO_WIN32_UTF8
	    WINVER=0x0500
	    POCO_OS_FAMILY_WINDOWS
	    POCO_STATIC
	    PCRE_STATIC
	    POCO_THREAD_STACK_SIZE
            HAVE_MEMMOVE
            Foundation_Config_INCLUDED
            POCO_NO_FPENVIRONMENT
        )
    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.14)
        target_compile_options(Poco PRIVATE "/Zc:__cplusplus") # available since VS 2017 15.7
    endif()

else ()
  target_compile_definitions(poco
	PUBLIC
            LINUX 
            HAVE_MEMMOVE 
            POCO_NO_WINDOWS_H
	)

endif(WIN32)

target_include_directories(Poco
PUBLIC
      $<INSTALL_INTERFACE:include>
      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
PRIVATE
      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../Support/include>
      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../Osal/include>
	  )

